# BitMapCompressor

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
src/: bitmap_compressor.cpp  bitmap_loader.cpp  bitmap_loader.hpp
